Ensure circles and timestamps are aligned in smaller screens

--- a/client/my-sites/activity/activity-log-item/style.scss
+++ b/client/my-sites/activity/activity-log-item/style.scss
@@ -69,6 +69,7 @@
 	z-index: 1;
 
 	@include breakpoint-deprecated( '<480px' ) {
+		width: 40px;
 		margin: -2px 8px 0 0;
 	}
 
