--- a/client/my-sites/activity/activity-log/style.scss
+++ b/client/my-sites/activity/activity-log/style.scss
@@ -11,7 +11,7 @@
 		width: 2px;
 
 		@include breakpoint-deprecated( '<480px' ) {
-			left: 25px;
+			left: 27px;
 		}
 	}
 
